maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:2: error: Missing closing brace `}' assumed here
override def run() {
^IslandMaze:2: error: expected start of definition
override def run() {
         ^