maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit) {
    while (!estNord) {
      if (!estFaceMur && getDirection==Direction.NORD) {
        avance()
      }
      for (i<-1 to 4) {
        if (getDirection==Direction.NORD) {
        	gauche()
      	}
      else {
        if (keepHandOnSideWall && !estFaceMur) {
          avance()
        } else if (!keepHandOnSideWall) {
          gauche()
          avance()
        } else {
          droite()
        }
      }
    }
    if (keepHandOnSideWall && !estFaceMur) {
      avance()
    } else if (!keepHandOnSideWall) {
      gauche()
      avance()
    } else {
      droite()
    }
  }
  prendBiscuit()
}

def keepHandOnSideWall(): Boolean = {
  gauche()
  if (estFaceMur) {
    droite()
    return true
  }
  droite()
  return false
}

def estNord(): Boolean = {
  if (getX==0) {
    return true
  } else {
    return false
  }
}